Fix Print Preview to System dialog bug

Update PrintJob::pdf_page_mapping_ so that PDF pages not in the
user's selection are ignored instead of causing the print job to be
cancelled.

Also remove some comments that are significantly outdated, and
caused confusion while investigating the bug.

Bug: 823876
Change-Id: Id6c1c3acb67c4d460cffa937f7a9b87eda402a88
Reviewed-on: https://chromium-review.googlesource.com/974042
Reviewed-by: Lei Zhang <thestig@chromium.org>
Commit-Queue: Rebekah Potter <rbpotter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545173}
Former-commit-id: 190d38b53a6294ca5ecb795e70520e585ed2128c