chrome/browser/printing/print_job.h
@@ -53,6 +53,15 @@ class PrintJob : public PrintJobWorkerOwner,
                   const base::string16& name,
                   int page_count);
 
+#if defined(OS_WIN)
+  // Overwrites the PDF page mapping to fill in values of -1 for all indices
+  // that are not selected. This is needed when the user opens the system
+  // dialog from the link in Print Preview on Windows and then sets a selection
+  // of pages, because all PDF pages will be converted, but only the user's
+  // selected pages should be sent to the printer. See https://crbug.com/823876.
+  void ResetPageMapping();
+#endif
+
   // content::NotificationObserver implementation.
   void Observe(int type,
                const content::NotificationSource& source,
